--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,8 +3,11 @@ spring:
         password: passer
         url: jdbc:mysql://localhost:3306/example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
         username: root
-        jpa:
-            database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    jpa:
+      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+      open-in-view: false
+      hibernate:
+        use-new-id-generator-mappings: false
     security:
         oauth2:
             resourceserver:
