--- a/charts/spring-rest/templates/configmap.yaml
+++ b/charts/spring-rest/templates/configmap.yaml
@@ -6,6 +6,8 @@ data:
   management.metrics.export.wavefront.uri: https://wavefront.surf
   spring.datasource.url: {{ .Values.api.configuration.datasource.url }}
   spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+  spring.jpa.hibernate.use-new-id-generator-mappings: "false"
+  spring.jpa.open-in-view: "false"
   spring.security.oauth2.resourceserver.jwt.jwk-set-uri: {{ .Values.api.configuration.jwt.jwk }}
   spring.redis.host: {{ .Values.api.configuration.redis.host }}
   spring.redis.port: "{{ .Values.api.configuration.redis.port }}"
