--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,10 @@
 spring:
-    datasource:
-      jpa:
-        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    jpa:
+      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+      show-sql: true
+      open-in-view: false
+      hibernate:
+        use-new-id-generator-mappings: false
     liquibase:
       change-log: classpath:/db/changelog/changelog-master.xml
     security:
