--- a/pom.xml
+++ b/pom.xml
@@ -353,13 +353,10 @@
         <url>https://github.com/laminba2003/spring-rest-services</url>
     </scm>
     <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/laminba2003/spring-rest-services</url>
         </repository>
     </distributionManagement>
 </project>
