--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master, release ]
     paths-ignore:
       - '**/README.md'
+      - '**/docker-compose.yml'
 
 jobs:
   build:
