--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,16 @@ services:
     image: laminba2003/spring-rest:0.0.1-SNAPSHOT
     container_name: spring-rest-backend
     ports:
-      - 8889:8889
+      - 9090:9090
     restart: unless-stopped
     environment:
       spring.datasource.url: jdbc:mysql://mysql:3306/spring-rest-db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
       spring.datasource.username: user
       spring.datasource.password: user
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://keycloak:8080/realms/training/protocol/openid-connect/certs
+      spring.cache.type: redis
+      spring.redis.host: redis
+      spring.redis.port: 6379
       JAVA_TOOL_OPTIONS: -Xss256K -XX:ReservedCodeCacheSize=64M -XX:MaxMetaspaceSize=128M -Xms512M -Xmx1g
     depends_on:
       mysql:
@@ -37,6 +40,14 @@ services:
     links:
       - mysql
       - keycloak
+    profiles:
+      - all
+
+  redis:
+    image: redis:5.0.3-alpine
+    container_name: spring-rest-redis
+    ports:
+      - 6379:6379
     profiles:
       - all
 
