--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
     container_name: spring-rest-redis
     ports:
       - 6379:6379
+    volumes:
+      - redis_data:/data
     profiles:
       - all
 
@@ -88,4 +90,6 @@ volumes:
   postgres_data:
     driver: local
   mysql_data:
+    driver: local
+  redis_data:
     driver: local
