--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
         url: jdbc:mysql://localhost:3306/example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
         username: root
     jpa:
-      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+      database-platform: org.hibernate.dialect.MySQL8Dialect
       open-in-view: false
       hibernate:
         use-new-id-generator-mappings: false
@@ -12,7 +12,7 @@ spring:
         oauth2:
             resourceserver:
                 jwt:
-                    jwk-set-uri: http://localhost:9092/auth/realms/training/protocol/openid-connect/certs
+                    jwk-set-uri: http://localhost:8080/realms/training/protocol/openid-connect/certs
 
 
 logging:
