--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
     datasource:
         password: passer
-        url: jdbc:mysql://localhost:3306/example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+        url: jdbc:mysql://mysql:3306/spring-rest-db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
         username: root
     jpa:
       database-platform: org.hibernate.dialect.MySQL8Dialect
