--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.9'
 services:
   mysql:
     image: mysql:8.0
-    container_name: spring-rest-mysql
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: spring-rest-db
+      MYSQL_DATABASE: spring-training
       MYSQL_USER: user
       MYSQL_PASSWORD: user
       MYSQL_ROOT_HOST: '%'
@@ -46,7 +46,7 @@ services:
 
   redis:
     image: redis:5.0.3-alpine
-    container_name: spring-rest-redis
+    container_name: redis
     ports:
       - 6379:6379
     volumes:
@@ -57,7 +57,7 @@ services:
 
   postgres:
     image: postgres:9.6
-    container_name: spring-rest-postgres
+    container_name: postgres
     environment:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
@@ -70,7 +70,7 @@ services:
 
   keycloak:
     image: bitnami/keycloak:18.0.0-debian-11-r0
-    container_name: spring-rest-keycloak
+    container_name: keycloak
     environment:
       KEYCLOAK_DATABASE_HOST: postgres
       KEYCLOAK_DATABASE_NAME: keycloak
@@ -88,7 +88,7 @@ services:
       - all
 
   maildev:
-    container_name: spring-rest-maildev
+    container_name: maildev
     image: djfarrelly/maildev:1.0.0-rc2
     ports:
       - 9999:80
