--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,56 +1,52 @@
 server:
-    port: 9090
+  port: 9093
 
 spring:
-    application:
-        name: spring-training
-    liquibase:
-        change-log: classpath:/db/changelog/changelog-master.xml
-
-springdoc:
-    api-docs:
-        path: /api-docs
+  application:
+    name: spring-training
+  liquibase:
+    change-log: classpath:/db/changelog/changelog-master.xml
 
 management:
-    endpoints:
-        web:
-            exposure:
-                include: health,info,metrics,wavefront
-    info:
-        env:
-            enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,wavefront
+  info:
+    env:
+      enabled: true
 
-    endpoint:
-      health:
-        show-details: ALWAYS
-
+  endpoint:
     health:
-        redis:
-          enabled: false
-        probes:
-            enabled: true
+      show-details: ALWAYS
+
+  health:
+    redis:
+      enabled: false
+    probes:
+      enabled: true
 
 info:
-    application:
-        name: spring-training
-        version: '@project.version@'
+  application:
+    name: Spring Rest
+    description: Simple SpringBoot Rest application
 
 wavefront:
-    application:
-        name: spring-training
+  application:
+    name: spring-training
 
 
 cors:
-    allowCredentials: true
-    allowedOriginPattern: "*"
-    allowedHeaders:
-        - "*"
-    allowedMethods:
-        - GET
-        - POST
-        - PUT
-        - DELETE
-        - PUT
-        - OPTIONS
-        - PATCH
-        - DELETE
+  allowCredentials: true
+  allowedOriginPattern: "*"
+  allowedHeaders:
+    - "*"
+  allowedMethods:
+    - GET
+    - POST
+    - PUT
+    - DELETE
+    - PUT
+    - OPTIONS
+    - PATCH
+    - DELETE
